k8s/data-service-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: data-service
    app.kubernetes.io/version: 0.0.2-SNAPSHOT
  name: data-service-srv
spec:
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  selector:
    app.kubernetes.io/name: data-service
    app.kubernetes.io/version: 0.0.2-SNAPSHOT
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
  labels:
    app: data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: data-service
      app.kubernetes.io/version: 0.0.2-SNAPSHOT
  template:
    metadata:
      annotations:
        app.dekorate.io/commit-id: 7937c4540c5af8396361615ae220c0112f3ddd42
        app.dekorate.io/vcs-url: https://github.com/juncevich/relay-system.git
      labels:
        app.kubernetes.io/name: data-service
        app.kubernetes.io/version: 0.0.2-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: alexunc/data-service:0.0.2-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: data-service
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "0.2"
              memory: 300Mi
            limits:
              cpu: "1.0"
              memory: 300Mi
            readinessProbe:
              httpGet:
                port: 8080
                path: /actuator/health
              initialDelaySeconds: 60
              timeoutSeconds: 2
              periodSeconds: 20
              failureThreshold: 5
            livenessProbe:
              httpGet:
                port: 8080
                path: /actuator/info
              initialDelaySeconds: 60
              timeoutSeconds: 2
              periodSeconds: 20
              failureThreshold: 5
  serviceAccountName: api-service-account
